v1.1.0/modules/schema/pages/class/BilateralExchangeActor.adoc
= `BilateralExchangeActor`
:toclevels: 4


+++BilateralExchangeActor describes an actor that provides ICCP data, consumes ICCP data or both. The ICCP data provider lists the data it makes available to an ICCP data consumer.  This data is described by ProvidedBilateralPoints. The relation between an ICCP data provider and a consumer is established by a BilateralExchangeAgreement.  It is up to the ICCP data consumer to select what ProvidedBilateralPoints to use.  The selection made is not described in this information model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:BilateralExchangeActor`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`BilateralExchangeActor`*
 *** xref::class/ICCPVCC.adoc[`ICCPVCC`]
 *** xref::class/ICCPVirtualControlCentre.adoc[`ICCPVirtualControlCentre`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CommunicationLink,`CommunicationLink`>>
//| [[slots_table.CommunicationLink]]<<CommunicationLink,`CommunicationLink`>>
| 0..* +
xref::class/CommunicationLink.adoc[`CommunicationLink`]
| +++Communication addressing for a Bilateral Table used by a ICCP data provider or consumer.+++
| _n/a_

| <<ConsumerBilateralExchange,`ConsumerBilateralExchange`>>
//| [[slots_table.ConsumerBilateralExchange]]<<ConsumerBilateralExchange,`ConsumerBilateralExchange`>>
| 0..* +
xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`]
| +++Agreement to information subscriber.+++
| _n/a_

| <<ProvidedBilateralIOPoint,`ProvidedBilateralIOPoint`>>
//| [[slots_table.ProvidedBilateralIOPoint]]<<ProvidedBilateralIOPoint,`ProvidedBilateralIOPoint`>>
| 0..* +
xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]
| +++ICCP information in a Bilateral table that will be exposed to a remote peer.+++
| _n/a_

| <<ProviderBilateralExchange,`ProviderBilateralExchange`>>
//| [[slots_table.ProviderBilateralExchange]]<<ProviderBilateralExchange,`ProviderBilateralExchange`>>
| 0..* +
xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`]
| +++Agreement to information provider.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#CommunicationLink]
=== `CommunicationLink`
+++Communication addressing for a Bilateral Table used by a ICCP data provider or consumer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BilateralExchangeActor.CommunicationLink`
| Cardinality
| 0..*
| Type
| xref::class/CommunicationLink.adoc[`CommunicationLink`]


|===

////
[.text-left]
--
<<slots_table.CommunicationLink,&#10548;>>
--
////


//[discrete]
[#ConsumerBilateralExchange]
=== `ConsumerBilateralExchange`
+++Agreement to information subscriber.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BilateralExchangeActor.ConsumerBilateralExchange`
| Cardinality
| 0..*
| Type
| xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`]


|===

////
[.text-left]
--
<<slots_table.ConsumerBilateralExchange,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProvidedBilateralIOPoint]
=== `ProvidedBilateralIOPoint`
+++ICCP information in a Bilateral table that will be exposed to a remote peer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BilateralExchangeActor.ProvidedBilateralIOPoint`
| Cardinality
| 0..*
| Type
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]


|===

////
[.text-left]
--
<<slots_table.ProvidedBilateralIOPoint,&#10548;>>
--
////


//[discrete]
[#ProviderBilateralExchange]
=== `ProviderBilateralExchange`
+++Agreement to information provider.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BilateralExchangeActor.ProviderBilateralExchange`
| Cardinality
| 0..*
| Type
| xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`]


|===

////
[.text-left]
--
<<slots_table.ProviderBilateralExchange,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`] | xref::class/BilateralExchangeAgreement.adoc#Provider[`Provider`]



| xref::class/CommunicationLink.adoc[`CommunicationLink`] | xref::class/CommunicationLink.adoc#BilateralExchangeActor[`BilateralExchangeActor`]



| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`] | xref::class/ProvidedBilateralPoint.adoc#BilateralExchangeActor[`BilateralExchangeActor`]


|===

